--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">ExpensesManager</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_event_description">EventDescriptionActivity</string>
+    <string name="zero_value">0</string>
+    <string name="invoices_title">Total Invoices</string>
 
 </resources>
