--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">ExpensesManager</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_summary_expenses">Summary Expenses</string>
+    <string name="title_event_fragment">Events</string>
+    <string name="menu_title_event_add">Add Event</string>
 
 </resources>
