--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_event_description">EventDescriptionActivity</string>
     <string name="zero_value">0</string>
     <string name="invoices_title">Total Invoices</string>
+    <string name="Add">Add</string>
 
 </resources>
