--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="action_bar_expenses_manager_title">Expenses Manager</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -49,7 +49,7 @@
     <string name ="string_login_status400">Error 400 Bad Request: The request was invalid.</string>
     <string name ="string_login_status401">Error 401 Unauthorized: The user credentials are invalid or disabled.</string>
     <string name ="string_login_status403">Error 403 Forbidden: The request is understood, but it has been refused.</string>
-    <string name ="string_login_status404">Error 404 Not Found: The URL requested is invalid or the resource requested does not exist.</string>
+    <string name ="string_login_status404">Error 404 Not Found: The user credentials are invalid or the resource requested does not exist.</string>
     <string name ="string_login_status406">Error 406 Not Acceptable: The format of the request is invalid. This is returned by the search API.</string>
     <string name ="string_login_status500">Error 500 Internal Server Error: Something is broken.</string>
     <string name ="string_login_status501">Error 501 Not Implemented: The requested feature is not implemented or supported.</string>
